--- a/web/themes/core/front/views/base.html.twig
+++ b/web/themes/core/front/views/base.html.twig
@@ -12,7 +12,7 @@
     {% block meta_tags %}
     {% endblock %}
     <!-- Bootstrap core CSS -->
-    <link href="{{ base_path }}/themes/core/front/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="{{ base_path }}/themes/core/front/dist/css/bootstrap.css" rel="stylesheet">
 
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <link href="{{ base_path }}/themes/core/front/dist/assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
